# covidin

./: README.md  app.py  pyproject.toml  update_data.py
templates/: index.html  show.html
