[tool.poetry]
name = "covidin"
version = "0.1.0"
description = ""
authors = ["gietema <jochem@giete.ma>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
starlette = "^0.13.8"
plotly = "^4.9.0"
pandas = "^1.1.1"
jinja2 = "^2.11.2"
uvicorn = "^0.11.8"
python-multipart = "^0.0.5"
aiofiles = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
